--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet": "^5.2.0",
     "react-images-upload": "^1.2.6",
     "react-redux": "^6.0.0",
+    "react-router": "^5.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-table": "^6.9.2",
