--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
+    "fuse.js": "^3.4.5",
     "history": "^4.9.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
