--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
   client:
     build:
       context: .
-      dockerfile: prod.Dockerfile
+      dockerfile: Dockerfile
     ports:
       - '80:80'
